--- a/css/style.css
+++ b/css/style.css
@@ -439,6 +439,11 @@ pre {
   animation: slideInFromLeft 1s ease-in;
 }
 
+.hidden {
+  visibility: hidden;
+  height: 0;
+}
+
 /* Tablets and under */
 @media (max-width: 768px) {
   .grid,
